--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="hero__cover">
 		<div class="hero__status"></div>
-		<div class="hero__navigation"></div>
+		<div class="hero__pagination"></div>
 		<a class="hero__button" href="./">Перейти в каталог</a>
 		<a class="hero__link" href="./"><img src="" alt=""></a>
 	</div>
@@ -49,7 +49,7 @@
 <section class="feed">
 	<h1 class="feed__title container">Выбери свой лук</h1>
 	<div class="feed__items container">
-		<div class="feed__item card" style="order: 1;">
+		<div class="feed__item card" style="order: 1">
 			<div class="card__tabs tab">
 				<div class="card__sliders tab__blocks">
 					<div class="card__slider tab__block swiper active">
