--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="hero__cover">
-		<div class="hero__status"></div>
-		<div class="hero__pagination"></div>
-		<a class="hero__button" href="./">Перейти в каталог</a>
-		<a class="hero__link" href="./"><img src="" alt=""></a>
-	</div>
+	<div class="hero__status"></div>
+	<div class="hero__dots"></div>
+	<a class="hero__button" href="./">Перейти в каталог</a>
+	<a class="hero__link" href="./">
+		<svg><use xlink:href="#icon-arr-right"></use></svg>
+	</a>
 </section>
 
 <section class="aims">
@@ -61,8 +61,44 @@
 		@@include('_card.html', {'order':'10'})
 		@@include('_card.html', {'order':'11'})
 		@@include('_card.html', {'order':'12'})
-		<div class="feed__item feed__item_video" style="order: 5">
-			<video src="./images/video-1.mp4"></video>
+		@@include('_card.html', {'order':'13'})
+		@@include('_card.html', {'order':'14'})
+		@@include('_card.html', {'order':'15'})
+		@@include('_card.html', {'order':'16'})
+		@@include('_card.html', {'order':'17'})
+		@@include('_card.html', {'order':'18'})
+		@@include('_card.html', {'order':'19'})
+		@@include('_card.html', {'order':'20'})
+		@@include('_card.html', {'order':'21'})
+		@@include('_card.html', {'order':'22'})
+		@@include('_card.html', {'order':'23'})
+		@@include('_card.html', {'order':'24'})
+		@@include('_card.html', {'order':'25'})
+		@@include('_card.html', {'order':'26'})
+		@@include('_card.html', {'order':'27'})
+		@@include('_card.html', {'order':'28'})
+		@@include('_card.html', {'order':'29'})
+		@@include('_card.html', {'order':'30'})
+		@@include('_card.html', {'order':'31'})
+		@@include('_card.html', {'order':'32'})
+		@@include('_card.html', {'order':'33'})
+		@@include('_card.html', {'order':'34'})
+		@@include('_card.html', {'order':'35'})
+		@@include('_card.html', {'order':'36'})
+		<div class="feed__video" style="order: 5">
+			<video src="./images/video-1.mp4" muted="muted" loop></video>
+		</div>
+		<div class="feed__video feed__video_wide" style="order: 12">
+			<video src="./images/video-2.mp4" muted="muted" loop></video>
+		</div>
+		<div class="feed__video" style="order: 22">
+			<video src="./images/video-1.mp4" muted="muted" loop></video>
+		</div>
+		<div class="feed__video" style="order: 28">
+			<video src="./images/video-1.mp4" muted="muted" loop></video>
+		</div>
+		<div class="feed__video feed__video_wide" style="order: 36">
+			<video src="./images/video-2.mp4" muted="muted" loop></video>
 		</div>
 	</div>
 </section>
@@ -132,13 +168,16 @@
 				</label>
 			</fieldset>
 			<div class="subscribe__bottom">
-				<label class="subscribe__agree">
-					<input type="checkbox">
-					<div class="subscribe__agree-side">
+				<div class="subscribe__agree">
+					<label class="subscribe__agree-item">
+						<input type="checkbox">
 						<a href="./">Я подтверждаю согласие с Политикой конфиденциальности и даю согласие на обработку персональных данных </a>
-						<p>Я согласен получать e-mail рассылки о презентациях новых коллекций</p>
-					</div>
-				</label>
+					</label>
+					<label class="subscribe__agree-item">
+						<input type="checkbox">
+						<span>Я согласен получать e-mail рассылки о презентациях новых коллекций</span>
+					</label>
+				</div>
 				<button class="subscribe__submit button">Подписаться</button>
 			</div>
 		</form>
