home adaptive work

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="hero__status"></div>
+	<div class="hero__status">
+		<div class="hero__s-current">00</div>
+		<div class="hero__s-progress"><span></span></div>
+		<div class="hero__s-total">00</div>
+	</div>
 	<div class="hero__dots"></div>
 	<a class="hero__button" href="./">Перейти в каталог</a>
 	<a class="hero__link" href="./">
@@ -22,27 +26,27 @@
 
 <section class="aims">
 	<div class="aims__inner container">
-		<div class="aims__item">
+		<a class="aims__item" href="./">
 			<img src="./images/aims-image-1.webp" alt="">
 			<div class="aims__content">
 				<span class="aims__text">Для неё</span>
-				<a class="aims__button" href="./">Перейти</a>
+				<span class="aims__button">Перейти</span>
 			</div>
-		</div>
-		<div class="aims__item">
+		</a>
+		<a class="aims__item" href="./">
 			<img src="./images/aims-image-2.webp" alt="">
 			<div class="aims__content">
 				<span class="aims__text">Для него</span>
-				<a class="aims__button" href="./">Перейти</a>
+				<span class="aims__button">Перейти</span>
 			</div>
-		</div>
-		<div class="aims__item">
+		</a>
+		<a class="aims__item" href="./">
 			<img src="./images/aims-image-3.webp" alt="">
 			<div class="aims__content">
 				<span class="aims__text">Unisex</span>
-				<a class="aims__button" href="./">Перейти</a>
+				<span class="aims__button">Перейти</span>
 			</div>
-		</div>
+		</a>
 	</div>
 </section>
 
