fix cards layout

--- a/src/index.html
+++ b/src/index.html
@@ -89,19 +89,19 @@
 		@@include('_card.html', {'order':'34'})
 		@@include('_card.html', {'order':'35'})
 		@@include('_card.html', {'order':'36'})
-		<div class="feed__video" style="order: 5">
+		<div class="feed__video feed__video_1">
 			<video src="./images/video-1.mp4" muted="muted" loop></video>
 		</div>
-		<div class="feed__video feed__video_wide" style="order: 12">
+		<div class="feed__video feed__video_2 feed__video_wide">
 			<video src="./images/video-2.mp4" muted="muted" loop></video>
 		</div>
-		<div class="feed__video" style="order: 22">
+		<div class="feed__video feed__video_3">
 			<video src="./images/video-1.mp4" muted="muted" loop></video>
 		</div>
-		<div class="feed__video" style="order: 28">
+		<div class="feed__video feed__video_4">
 			<video src="./images/video-1.mp4" muted="muted" loop></video>
 		</div>
-		<div class="feed__video feed__video_wide" style="order: 36">
+		<div class="feed__video feed__video_5 feed__video_wide">
 			<video src="./images/video-2.mp4" muted="muted" loop></video>
 		</div>
 	</div>
