--- a/src/detail.html
+++ b/src/detail.html
@@ -13,11 +13,108 @@
 		</div>
 		<div class="detail__side">
 			<div class="detail__sticky">
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis iste nulla ullam asperiores! Aspernatur, consequuntur molestias eaque quod velit, consectetur exercitationem saepe possimus expedita, sequi ad molestiae eum officia nam! Magni asperiores iure nostrum saepe blanditiis quas optio architecto aut, dolorum repudiandae in eum at magnam quisquam quo iste reiciendis commodi alias. Sint laudantium est atque obcaecati soluta. Consequuntur expedita velit, deserunt provident sunt repudiandae earum aperiam optio modi impedit similique voluptatum adipisci quisquam debitis doloribus nihil, corporis architecto nesciunt totam labore atque voluptas! Eligendi rem aperiam quaerat porro fugiat libero repellendus, quas suscipit totam. Maiores, tempora. Neque, similique dicta?</p>
-				<p>Consequuntur eaque facere deserunt reiciendis? Neque, dicta autem aliquid minima odit sed quia inventore beatae. Ipsam accusantium maiores eligendi consectetur, atque eaque, illum deleniti cumque, veritatis laudantium perferendis architecto vitae qui nihil expedita! Debitis culpa et eius accusamus consequuntur accusantium perferendis? Dolor harum voluptatum eligendi exercitationem quia consequuntur laboriosam minus, voluptate delectus animi. Dolorum nostrum velit dignissimos, enim fuga cumque quam in nam asperiores iusto corporis similique assumenda nulla eius, fugit, excepturi nihil est ad? Non optio reiciendis perferendis, exercitationem nisi temporibus est. Reprehenderit minus consequuntur tempore magnam autem amet unde id maiores cum, aut accusamus ipsa libero maxime ratione?</p>
-				<p>Neque non ab iste exercitationem quis similique. Vitae hic fuga doloremque sequi laudantium quasi reprehenderit voluptatem autem cum delectus natus error nesciunt fugit exercitationem temporibus animi vel nostrum, ipsam est nam porro. Tenetur repellendus distinctio illum ea odio et officia? Quisquam explicabo doloremque fugiat qui? Explicabo ipsam maiores dolorum laborum nihil, cumque quod ex rerum fugiat facilis! Inventore impedit accusamus nemo ratione ullam tempora porro cupiditate veritatis est tempore obcaecati sapiente reiciendis optio, libero autem fugit harum? Corporis laboriosam et veritatis architecto, porro quaerat reprehenderit. Fugit deserunt eos assumenda commodi asperiores repellendus iste quo eveniet rerum. Dolore iure impedit alias.</p>
-				<p>Libero quis maiores repellendus numquam magni, totam fugiat incidunt error ab dolorem cum ut laborum vitae corporis autem, iure nisi sint natus ratione soluta odit quos, quibusdam sit illo. Aliquid nemo, eos autem sequi earum in iste eum quas nesciunt nisi consequatur et labore dolores quis quia laborum reiciendis quam libero commodi maiores iure? Error quisquam, doloremque aperiam rerum dolores, dolorem libero repellendus hic saepe assumenda ipsam perspiciatis maiores tempora veniam excepturi voluptas deserunt molestias quo qui? Soluta eos maxime impedit doloribus, quibusdam ea eum minus tempore, id, facere nihil dignissimos libero ut iusto nulla nobis sunt in quis! Reprehenderit!</p>
+				<form action="./" class="detail__form d-form">
+					<h1 class="d-form__title">Топ с v-образным вырезом горловины лодочка</h1>
+					<div class="d-form__prices">
+						<div class="d-form__price-current">3 500 руб.</div>
+						<div class="d-form__price-old">
+							<svg><use xlink:href="#icon-label"></use></svg>
+							<span>4 500 руб.</span>
+						</div>
+					</div>
+					<div class="d-form__props">
+						<span><strong>Aртикул: 3702513/ Топ</strong></span>
+						<span>Линия: весна - лета 2024/2025</span>
+						<span>Капсула: капсула 03</span>
+					</div>
+					<div class="d-form__sizes d-sizes">
+						<div class="d-sizes__head">
+							<span>Доступные размеры:</span>
+							<svg><use xlink:href="#icon-rule"></use></svg>
+							<span>Таблица размеров</span>
+						</div>
+						<div class="d-sizes__row">
+							<div class="d-sizes__title">Размер:</div>
+							<div class="d-sizes__size">40</div>
+							<div class="d-sizes__size">42</div>
+							<div class="d-sizes__size">44</div>
+							<div class="d-sizes__size">46</div>
+							<div class="d-sizes__size">48</div>
+							<div class="d-sizes__size">50</div>
+						</div>
+						<div class="d-sizes__row">
+							<div class="d-sizes__title">Количество:</div>
+							<div class="d-sizes__control d-sizes__control_disabled">
+								<button>+</button><input type="text" value="0" readonly><button>-</button>
+							</div>
+							<div class="d-sizes__control">
+								<button>+</button><input type="text" value="0" readonly><button>-</button>
+							</div>
+							<div class="d-sizes__control">
+								<button>+</button><input type="text" value="0" readonly><button>-</button>
+							</div>
+							<div class="d-sizes__control">
+								<button>+</button><input type="text" value="0" readonly><button>-</button>
+							</div>
+							<div class="d-sizes__control d-sizes__control_disabled">
+								<button>+</button><input type="text" value="0" readonly><button>-</button>
+							</div>
+							<div class="d-sizes__control d-sizes__control_disabled">
+								<button>+</button><input type="text" value="0" readonly><button>-</button>
+							</div>
+						</div>
+					</div>
+					<div class="d-form__buttons">
+						<button class="d-form__buy">Купить в один клик</button>
+						<button class="d-form__cart">
+							<svg><use xlink:href="#icon-cart"></use></svg>
+						</button>
+						<button class="d-form__favorite d-form__favorite_set">
+							<svg><use xlink:href="#icon-favorite"></use></svg>
+						</button>
+					</div>
+					<div class="d-form__info">
+						<h2 class="d-form__info-title">Описание</h2>
+						<div class="d-form__info-text">
+							<p>Коллекция Committed. Прямой фасон. Приталенный фасон. V-образный вырез горловины с лацканами. Воротник с лацканами. Длинные рукава. Подплечники.</p>
+							<p>Спереди два прорезных кармана. Защипы. Сзади разрез. Подкладка. Тотальный образ. Стиль блейзера.</p>
+						</div>
+						<h2 class="d-form__info-title">Состав</h2>
+						<div class="d-form__info-text">
+							<p>Коллекция Committed. Прямой фасон. Приталенный фасон. V-образный вырез горловины с лацканами. Воротник с лацканами. Длинные рукава. Подплечники.</p>
+							<p>Спереди два прорезных кармана. Защипы. Сзади разрез. Подкладка. Тотальный образ. Стиль блейзера.</p>
+						</div>
+						<h2 class="d-form__info-title">Уход</h2>
+						<div class="d-form__info-text">
+							<p>Коллекция Committed. Прямой фасон. Приталенный фасон. V-образный вырез горловины с лацканами. Воротник с лацканами. Длинные рукава. Подплечники.</p>
+							<p>Спереди два прорезных кармана. Защипы. Сзади разрез. Подкладка. Тотальный образ. Стиль блейзера.</p>
+						</div>
+					</div>
+				</form>
 			</div>
+		</div>
+	</div>
+</section>
+
+<section class="feed">
+	<h1 class="feed__title title title_left container">Весь образ</h1>
+	<div class="feed__items container">
+		@@include('_card.html', {'order':'1'})
+		@@include('_card.html', {'order':'2'})
+		@@include('_card.html', {'order':'3'})
+		@@include('_card.html', {'order':'4'})
+	</div>
+</section>
+
+<section class="feed">
+	<h1 class="feed__title title title_left container">Возможно вам понравится</h1>
+	<div class="feed__items container">
+		@@include('_card.html', {'order':'1'})
+		@@include('_card.html', {'order':'2'})
+		@@include('_card.html', {'order':'3'})
+		@@include('_card.html', {'order':'4'})
+		<div class="feed__video feed__video_last feed__video_wide">
+			<video src="./images/video-2.mp4" muted="muted" loop></video>
 		</div>
 	</div>
 </section>
