--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
 			<video src="./images/video-1.mp4" muted="muted" loop></video>
 		</div>
 		<div class="feed__video feed__video_5 feed__video_wide">
+			<a href="./"><svg><use xlink:href="#icon-arr-right"></use></svg></a>
 			<video src="./images/video-2.mp4" muted="muted" loop></video>
 		</div>
 	</div>
