--- a/src/detail.html
+++ b/src/detail.html
@@ -36,16 +36,16 @@
 				</div>
 				<div class="gallery__slider swiper">
 					<div class="gallery__wrapper swiper-wrapper">
-						<div class="gallery__image swiper-slide" data-src="./images/card-image-1.webp">
+						<div class="gallery__image swiper-slide" data-src="./images/card-image-4-large.webp">
 							<img src="./images/card-image-4.webp" alt="">
 						</div>
-						<div class="gallery__image swiper-slide" data-src="./images/card-image-2.webp">
+						<div class="gallery__image swiper-slide" data-src="./images/card-image-3.webp">
 							<img src="./images/card-image-3.webp" alt="">
 						</div>
-						<div class="gallery__image swiper-slide" data-src="./images/card-image-3.webp">
+						<div class="gallery__image swiper-slide" data-src="./images/card-image-2.webp">
 							<img src="./images/card-image-2.webp" alt="">
 						</div>
-						<div class="gallery__image swiper-slide" data-src="./images/card-image-4-large.webp">
+						<div class="gallery__image swiper-slide" data-src="./images/card-image-1.webp">
 							<img src="./images/card-image-1.webp" alt="">
 						</div>
 					</div>
@@ -81,44 +81,7 @@
 						<span>Линия: весна - лета 2024/2025</span>
 						<span>Капсула: капсула 03</span>
 					</div>
-
-					<div class="d-form__sizes d-sizes">
-						<div class="d-sizes__head">
-							<span>Доступные размеры:</span>
-							<svg><use xlink:href="#icon-rule"></use></svg>
-							<span>Таблица размеров</span>
-						</div>
-						<div class="d-sizes__row">
-							<div class="d-sizes__title">Размер:</div>
-							<div class="d-sizes__size">40</div>
-							<div class="d-sizes__size">42</div>
-							<div class="d-sizes__size">44</div>
-							<div class="d-sizes__size">46</div>
-							<div class="d-sizes__size">48</div>
-							<div class="d-sizes__size">50</div>
-						</div>
-						<div class="d-sizes__row">
-							<div class="d-sizes__title">Количество:</div>
-							<div class="d-sizes__control d-sizes__control_disabled">
-								<button>+</button><input type="text" value="0" readonly><button>-</button>
-							</div>
-							<div class="d-sizes__control">
-								<button>+</button><input type="text" value="0" readonly><button>-</button>
-							</div>
-							<div class="d-sizes__control">
-								<button>+</button><input type="text" value="0" readonly><button>-</button>
-							</div>
-							<div class="d-sizes__control">
-								<button>+</button><input type="text" value="0" readonly><button>-</button>
-							</div>
-							<div class="d-sizes__control d-sizes__control_disabled">
-								<button>+</button><input type="text" value="0" readonly><button>-</button>
-							</div>
-							<div class="d-sizes__control d-sizes__control_disabled">
-								<button>+</button><input type="text" value="0" readonly><button>-</button>
-							</div>
-						</div>
-					</div>
+					@@include('_sizes.html', {'cls':'d-form__sizes'})
 					<div class="d-form__buttons">
 						<button class="d-form__buy">Купить в один клик</button>
 						<button class="d-form__cart">
@@ -127,6 +90,10 @@
 						<button class="d-form__favorite d-form__favorite_set">
 							<svg><use xlink:href="#icon-favorite"></use></svg>
 						</button>
+					</div>
+					<div class="d-form__panel">
+						<button>Добавить в корзину</button>
+						<button>В избранное</button>
 					</div>
 					<div class="d-form__info">
 						<h2 class="d-form__info-title">Описание</h2>
