add catalog page

--- a/src/detail.html
+++ b/src/detail.html
@@ -91,7 +91,7 @@
 							<svg><use xlink:href="#icon-favorite"></use></svg>
 						</button>
 					</div>
-					<div class="d-form__panel">
+					<div class="d-form__panel" data-scroll-lock-fill-gap>
 						<button>Добавить в корзину</button>
 						<button>В избранное</button>
 					</div>
