--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-@@include("_head.html") 
+@@include("_head.html", {"id":"home"}) 
 @@include("_header.html", {"mod":"home"})
 
 <section class="hero">
