--- a/src/detail.html
+++ b/src/detail.html
@@ -14,22 +14,22 @@
 				<div class="gallery__slider swiper active">
 					<div class="gallery__wrapper swiper-wrapper">
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-1.webp">
-							<img src="./images/card-image-1.webp" alt="">
+							<img src="./images/card-image-1.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-2.webp">
-							<img src="./images/card-image-2.webp" alt="">
+							<img src="./images/card-image-2.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-3.webp">
-							<img src="./images/card-image-3.webp" alt="">
+							<img src="./images/card-image-3.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-4-large.webp">
-							<img src="./images/card-image-4.webp" alt="">
+							<img src="./images/card-image-4.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-3.webp">
-							<img src="./images/card-image-3.webp" alt="">
+							<img src="./images/card-image-3.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-5-large.webp">
-							<img src="./images/card-image-5.webp" alt="">
+							<img src="./images/card-image-5.webp" loading="lazy" alt="">
 						</div>
 					</div>
 					<div class="gallery__dots"></div>
@@ -37,16 +37,16 @@
 				<div class="gallery__slider swiper">
 					<div class="gallery__wrapper swiper-wrapper">
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-4-large.webp">
-							<img src="./images/card-image-4.webp" alt="">
+							<img src="./images/card-image-4.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-3.webp">
-							<img src="./images/card-image-3.webp" alt="">
+							<img src="./images/card-image-3.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-2.webp">
-							<img src="./images/card-image-2.webp" alt="">
+							<img src="./images/card-image-2.webp" loading="lazy" alt="">
 						</div>
 						<div class="gallery__image swiper-slide" data-src="./images/card-image-1.webp">
-							<img src="./images/card-image-1.webp" alt="">
+							<img src="./images/card-image-1.webp" loading="lazy" alt="">
 						</div>
 					</div>
 					<div class="gallery__dots"></div>
