--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-@@include("_head.html", {"id":"home"}) 
-@@include("_header.html", {"mod":"home"})
+@@include("_head.html", {"class":"outer"}) 
+@@include("_header.html", {"mod":"outer"})
 
 <section class="hero">
 	<div class="hero__slider swiper">
@@ -27,21 +27,21 @@
 <section class="aims">
 	<div class="aims__inner container">
 		<a class="aims__item" href="./">
-			<img src="./images/aims-image-1.webp" alt="">
+			<img src="./images/aims-image-1.webp" loading="lazy" alt="">
 			<div class="aims__content">
 				<span class="aims__text">Для неё</span>
 				<span class="aims__button">Перейти</span>
 			</div>
 		</a>
 		<a class="aims__item" href="./">
-			<img src="./images/aims-image-2.webp" alt="">
+			<img src="./images/aims-image-2.webp" loading="lazy" alt="">
 			<div class="aims__content">
 				<span class="aims__text">Для него</span>
 				<span class="aims__button">Перейти</span>
 			</div>
 		</a>
 		<a class="aims__item" href="./">
-			<img src="./images/aims-image-3.webp" alt="">
+			<img src="./images/aims-image-3.webp" loading="lazy" alt="">
 			<div class="aims__content">
 				<span class="aims__text">Unisex</span>
 				<span class="aims__button">Перейти</span>
@@ -112,42 +112,42 @@
 	<h2 class="news__title title container">Новости</h2>
 	<div class="news__items container" data-hidden="3">
 		<div class="news__item n-card">
-			<div class="n-card__image"><img src="./images/news-image-1.webp" alt=""></div>
+			<div class="n-card__image"><img src="./images/news-image-1.webp" loading="lazy" alt=""></div>
 			<div class="n-card__bottom">
 				<h3 class="n-card__title">Для уличной прогулки</h3>
 				<a class="n-card__link" href="./">Подробнее</a>
 			</div>
 		</div>
 		<div class="news__item n-card">
-			<div class="n-card__image"><img src="./images/news-image-2.webp" alt=""></div>
+			<div class="n-card__image"><img src="./images/news-image-2.webp" loading="lazy" alt=""></div>
 			<div class="n-card__bottom">
 				<h3 class="n-card__title">Для занятий в зале</h3>
 				<a class="n-card__link" href="./">Подробнее</a>
 			</div>
 		</div>
 		<div class="news__item n-card">
-			<div class="n-card__image"><img src="./images/news-image-3.webp" alt=""></div>
+			<div class="n-card__image"><img src="./images/news-image-3.webp" loading="lazy" alt=""></div>
 			<div class="n-card__bottom">
 				<h3 class="n-card__title">Для бега и спорта</h3>
 				<a class="n-card__link" href="./">Подробнее</a>
 			</div>
 		</div>
 		<div class="news__item n-card">
-			<div class="n-card__image"><img src="./images/news-image-1.webp" alt=""></div>
+			<div class="n-card__image"><img src="./images/news-image-1.webp" loading="lazy" alt=""></div>
 			<div class="n-card__bottom">
 				<h3 class="n-card__title">Для уличной прогулки</h3>
 				<a class="n-card__link" href="./">Подробнее</a>
 			</div>
 		</div>
 		<div class="news__item n-card">
-			<div class="n-card__image"><img src="./images/news-image-2.webp" alt=""></div>
+			<div class="n-card__image"><img src="./images/news-image-2.webp" loading="lazy" alt=""></div>
 			<div class="n-card__bottom">
 				<h3 class="n-card__title">Для занятий в зале</h3>
 				<a class="n-card__link" href="./">Подробнее</a>
 			</div>
 		</div>
 		<div class="news__item n-card">
-			<div class="n-card__image"><img src="./images/news-image-3.webp" alt=""></div>
+			<div class="n-card__image"><img src="./images/news-image-3.webp" loading="lazy" alt=""></div>
 			<div class="n-card__bottom">
 				<h3 class="n-card__title">Для бега и спорта</h3>
 				<a class="n-card__link" href="./">Подробнее</a>
