add article page

--- a/src/about.html
+++ b/src/about.html
@@ -12,6 +12,57 @@
 	</div>
 </section>
 
+<section class="history">
+	<div class="history__inner container">
+		<h2 class="history__title">
+			<span>О бренде</span>
+			<span>Volnui уже два года делает<br/> людей красивыми и уверенными в себе</span>
+		</h2>
+		<div class="history__items">
+			<div class="history__item">
+				<h3 class="history__i-title">2024 год</h3>
+				<div class="history__i-text"><span>История компании берет свое начало</span> <span>в 2024 году вместе с открытием первого</span> <span>магазина VOLNUI в Москве</span></div>
+			</div>
+			<div class="history__item">
+				<h3 class="history__i-title">> 1 Млн</h3>
+				<div class="history__i-text"><span>Единиц готовой продукции</span> <span>в год изготавливается</span> <span>на нашем производстве</span></div>
+			</div>
+			<div class="history__item">
+				<h3 class="history__i-title">Для кого</h3>
+				<div class="history__i-text">Одежда бренда VOLNUI за счет своей универсальности – отличный вариант для людей разных возрастных категорий. Нас выбирают люди от 20 до 50 лет, которые хотят создать стильный образ для любого случая жизни</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="about">
+	<div class="about__inner">
+		<div class="about__items">
+			<div class="about__top">
+				<div class="about__t-content">
+					<h2 class="about__t-title">О бренде Volnui</h2>
+					<div class="about__t-text">
+						<p>Бренд VOLNUI – одежда для тех, кто любит сочетать разные стили. С 2023 года мы создаем спортивные, классические и повседневные коллекции одежды для всех. Это позволяет каждому человеку сочетать разные элементы гардероба и создать для себя уникальный образ на разные случаи жизни.</p>
+						<p>VOLNUI любят за качество и натуральные тканиот турецких и итальянских фабрик. Вся одежда изготавливается преимущественно из хлопка, шерсти, льна, за которыми легко ухаживать</p>
+						<p>У нас свое собственное производство – начиная от лекал, разработки образцов и пошива партии. Все модели создаются по современным трендам и предпочтениям наших клиентов.</p>
+						<p>Одежда VOLNUI станет для вас воплощением всех ваших лучших образов</p>
+					</div>
+					<a class="about__button" href="./">Заявка на сотрудничество</a>
+				</div>
+			</div>
+			<div class="about__item">
+				<a class="about__i-watch" href="./"><svg><use xlink:href="#icon-play"></use></svg></a>
+				<h3 class="about__i-title">Техника производства</h3>
+				<div class="about__i-text">VOLNUI – это не только онлайн-магазин, но и собственная фабрика по производству одежды. Над каждой модной коллекцией трудятся дизайнер, модельер-конструктор, технолог, внимательный к деталям закройщик и портной</div>
+			</div>
+			<div class="about__item">
+				<h3 class="about__i-title">Команда</h3>
+				<div class="about__i-text">Эта команда специалистов имеют большой опыт в легкой промышленности и создании одежды. Именно поэтому все модели получаются идеальными в посадке, утонченными и удобными в носке</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 <section class="news">
 	<h2 class="news__title title container">Новости</h2>
 	<div class="news__items container" data-hidden="3">
