--- a/src/info.html
+++ b/src/info.html
@@ -16,11 +16,11 @@
 			<h1 class="info__title title">Как сделать заказ</h1>
 		</div>
 		<div class="info__buttons">
-			<button class="info__button active"><span>Политика конфиденциальности</span></button>
-			<button class="info__button"><span>Возврат</span></button>
-			<button class="info__button"><span>Оплата</span></button>
-			<button class="info__button"><span>Доставка</span></button>
-			<button class="info__button"><span>Как сделать заказ</span></button>
+			<button class="info__button active" id="politics"><span>Политика конфиденциальности</span></button>
+			<button class="info__button" id="return"><span>Возврат</span></button>
+			<button class="info__button" id="payment"><span>Оплата</span></button>
+			<button class="info__button" id="delivery"><span>Доставка</span></button>
+			<button class="info__button" id="order"><span>Как сделать заказ</span></button>
 		</div>		
 	</div>
 	<div class="info__content">
