fix video controls on IOS

--- a/src/category.html
+++ b/src/category.html
@@ -42,6 +42,13 @@
 	</div>
 </div>
 
+<div class="filter container">
+	<div class="filter__range range">
+		<input type="range">
+		<input type="range">
+	</div>
+</div>
+
 <section class="feed">
 	<div class="feed__items container">
 		@@include('_card.html', {'order':'1'})
