--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 		<div class="hero__s-total">00</div>
 	</div>
 	<div class="hero__dots"></div>
-	<a class="hero__button" href="./">Перейти в каталог</a>
-	<a class="hero__link" href="./">
+	<a class="hero__button" href="./category.html">Перейти в каталог</a>
+	<a class="hero__link" href="./category.html">
 		<svg><use xlink:href="#icon-arr-right"></use></svg>
 	</a>
 </section>
