add hidden right sidebar to category.html page

--- a/src/category.html
+++ b/src/category.html
@@ -114,6 +114,13 @@
 	<button class="filter__submit">Применить фильтр</button>
 </div>
 
+<div class="aside">
+	<button class="aside__close"></button>
+	<div class="aside__content">
+		
+	</div>
+</div>
+
 <section class="feed">
 	<div class="feed__items container">
 		@@include('_card.html', {'order':'1'})
