add cart and favorites pages

--- a/src/detail.html
+++ b/src/detail.html
@@ -137,7 +137,7 @@
 		@@include('_card.html', {'order':'4'})
 		<div class="feed__video feed__video_last feed__video_wide">
 			<a href="./"><svg><use xlink:href="#icon-arr-right"></use></svg></a>
-			<video src="./images/video-2.mp4" muted="muted" loop></video>
+			<video src="./images/video-2.mp4" muted="muted" poster="./images/video-poster-wide.webp" loop playsinline></video>
 		</div>
 	</div>
 </section>
