--- a/src/index.html
+++ b/src/index.html
@@ -90,20 +90,20 @@
 		@@include('_card.html', {'order':'35'})
 		@@include('_card.html', {'order':'36'})
 		<div class="feed__video feed__video_1">
-			<video src="./images/video-1.mp4" muted="muted" loop></video>
+			<video src="./images/video-1.mp4" muted="muted" poster="./images/video-poster.webp" loop playsinline></video>
 		</div>
 		<div class="feed__video feed__video_2 feed__video_wide">
-			<video src="./images/video-2.mp4" muted="muted" loop></video>
+			<video src="./images/video-2.mp4" muted="muted" poster="./images/video-poster-wide.webp" loop playsinline></video>
 		</div>
 		<div class="feed__video feed__video_3">
-			<video src="./images/video-1.mp4" muted="muted" loop></video>
+			<video src="./images/video-1.mp4" muted="muted" poster="./images/video-poster.webp" loop playsinline></video>
 		</div>
 		<div class="feed__video feed__video_4">
-			<video src="./images/video-1.mp4" muted="muted" loop></video>
+			<video src="./images/video-1.mp4" muted="muted" poster="./images/video-poster.webp" loop playsinline></video>
 		</div>
 		<div class="feed__video feed__video_5 feed__video_wide">
 			<a href="./"><svg><use xlink:href="#icon-arr-right"></use></svg></a>
-			<video src="./images/video-2.mp4" muted="muted" loop></video>
+			<video src="./images/video-2.mp4" muted="muted" poster="./images/video-poster-wide.webp" loop playsinline></video>
 		</div>
 	</div>
 </section>
