--- a/src/info.html
+++ b/src/info.html
@@ -15,7 +15,7 @@
 			<h1 class="info__title title">Доставка</h1>
 			<h1 class="info__title title">Как сделать заказ</h1>
 		</div>
-		<div class="info__buttons">
+		<div class="info__buttons info__buttons_wide">
 			<button class="info__button active" id="politics"><span>Политика конфиденциальности</span></button>
 			<button class="info__button" id="return"><span>Возврат</span></button>
 			<button class="info__button" id="payment"><span>Оплата</span></button>
