add modal order complete

--- a/src/detail.html
+++ b/src/detail.html
@@ -83,7 +83,7 @@
 					</div>
 					@@include('_sizes.html', {'cls':'d-form__sizes'})
 					<div class="d-form__buttons">
-						<button class="d-form__buy">Купить в один клик</button>
+						<button class="d-form__buy" type="button" data-modal="#complete">Купить в один клик</button>
 						<button class="d-form__cart">
 							<svg><use xlink:href="#icon-cart"></use></svg>
 						</button>
