--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,61 @@
 <section class="feed">
 	<h1 class="feed__title title container">Выбери свой лук</h1>
 	<div class="feed__items container">
-		@@include('_card.html', {'order':'1'})
+		<a class="feed__item card" href="./detail.html" style="order: 1">
+			<div class="card__tabs tab">
+				<div class="card__sliders tab__blocks">
+					<div class="card__slider tab__block swiper active" data-badge="new" data-discount="-34%">
+						<div class="swiper-wrapper">
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-1.webp" loading="lazy" alt="">
+							</div>
+							<!-- <div class="card__slide swiper-slide">
+								<img src="./images/card-image-2.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-3.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-4.webp" loading="lazy" alt="">
+							</div> -->
+						</div>
+						<div class="card__dots"></div>
+						<span class="card__link">Смотреть весь образ</span>
+					</div>
+					<!-- <div class="card__slider tab__block swiper" data-badge="new" data-discount="-20%">
+						<div class="swiper-wrapper">
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-5.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-3.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-2.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-1.webp" loading="lazy" alt="">
+							</div>
+						</div>
+						<div class="card__dots"></div>
+						<span class="card__link">Смотреть весь образ</span>
+					</div> -->
+				</div>
+				<div class="card__toggles tab__buttons toggle">
+					<!-- <button class="toggle__button tab__button active"></button> -->
+					<!-- <button class="toggle__button tab__button"></button> -->
+					<button class="card__favorite">
+						<svg><use xlink:href="#icon-favorite"></use></svg>
+					</button>
+				</div>
+			</div>
+			<div class="card__bottom">
+				<h2 class="card__title">Спортивный топ</h2>
+				<div class="card__irrelevant">4599 ₽</div>
+				<div class="card__price">2999 ₽</div>
+			</div>
+		</a>
+		<!-- @@include('_card.html', {'order':'1'}) -->
 		@@include('_card.html', {'order':'2'})
 		@@include('_card.html', {'order':'3'})
 		@@include('_card.html', {'order':'4'})
