--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,11 @@
 <section class="feed">
 	<h1 class="feed__title title container">Выбери свой лук</h1>
 	<div class="feed__items container">
-		<a class="feed__item card" href="./detail.html" style="order: 1">
+		<div class="feed__item card" style="order: 1">
 			<div class="card__tabs tab">
 				<div class="card__sliders tab__blocks">
 					<div class="card__slider tab__block swiper active" data-badge="new" data-discount="-34%">
-						<div class="swiper-wrapper">
+						<a class="swiper-wrapper" href="./detail.html">
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-1.webp" loading="lazy" alt="">
 							</div>
@@ -73,12 +73,12 @@
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-4.webp" loading="lazy" alt="">
 							</div> -->
-						</div>
+						</a>
 						<div class="card__dots"></div>
 						<span class="card__link">Смотреть весь образ</span>
 					</div>
 					<!-- <div class="card__slider tab__block swiper" data-badge="new" data-discount="-20%">
-						<div class="swiper-wrapper">
+						<a class="swiper-wrapper" href="./detail.html">
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-5.webp" loading="lazy" alt="">
 							</div>
@@ -91,7 +91,7 @@
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-1.webp" loading="lazy" alt="">
 							</div>
-						</div>
+						</a>
 						<div class="card__dots"></div>
 						<span class="card__link">Смотреть весь образ</span>
 					</div> -->
@@ -105,11 +105,11 @@
 				</div>
 			</div>
 			<div class="card__bottom">
-				<h2 class="card__title">Спортивный топ</h2>
+				<h2 class="card__title"><a href="./detail.html">Спортивный топ</a></h2>
 				<div class="card__irrelevant">4599 ₽</div>
 				<div class="card__price">2999 ₽</div>
 			</div>
-		</a>
+		</div>
 		<!-- @@include('_card.html', {'order':'1'}) -->
 		@@include('_card.html', {'order':'2'})
 		@@include('_card.html', {'order':'3'})
