add data-attributes to range slider

--- a/src/category.html
+++ b/src/category.html
@@ -107,7 +107,9 @@
 		<div class="filter__column filter__column_range">
 			<h2 class="filter__subtitle">Цена</h2>
 			<div class="filter__controls">
-				<div class="filter__range range"><input type="range"><input type="range"></div>
+				<div class="filter__range range" data-start-min="0" data-start-max="7500" data-price-max="10000">
+					<input type="range"><input type="range">
+				</div>
 			</div>
 		</div>
 	</div>
